# Hermes-Ma

./: .gitignore  README.md  config.example.yaml  config.py  main.py  mcp_servers.example.yaml  pyproject.toml  requirements.txt  run_health.py
mcp_servers/: mcp_sequential-thinking.json
shared/roles/chief-of-staff/: role.md
shared/roles/critic/: role.md
shared/roles/explorer/: role.md
shared/roles/researcher/: role.md
